fix: update image margin in general.scss for improved spacing and consistency with styles.min.css

--- a/src/sass/general.scss
+++ b/src/sass/general.scss
@@ -2801,7 +2801,7 @@ table {
 	.text-content-option-text {
 		img {
 			display: inline-block;
-			margin: 0 5px 5px 0;
+			margin: 0 8px 8px 0;
 			vertical-align: middle;
 		}
 	}
